修改sonar